test/error/quote_unterminated.htest
#!/usr/bin/env hashdot
#.name="value

